--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -20,7 +20,7 @@
 
     <color name="theme_primary">#04561A</color>
     <color name="theme_primary_dark">#9C27B0</color>
-    <color name="theme_accent">#04561A</color>
+    <color name="theme_accent">#7B1FA2</color>
     <color name="ltgray">#ffe0e0e0</color>
     <color name="toolbar_color">#9C27B0</color>
     <color name="list_text_color">#1A237E</color>
